--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<meta name="theme-color" content="#000000">
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
   <div style="scroll-behavior:smooth">
