--- a/404.html
+++ b/404.html
@@ -1,3 +1,6 @@
+---
+permalink: /404.html
+---
 <!DOCTYPE html>
 <html>
   <head>
@@ -24,7 +27,7 @@
   </head>
   <body>
   <div style="scroll-behavior:smooth">
-    <audio id=stream src="http://listen.openstream.co/3813/audio"></audio>
+    <audio id=stream src="http://silhouetteradio.ddns.net:8123/silhouette"></audio>
 	<img src="back.png" style="display: none" id=top>
 	<div id=scroll></div>
     <div id=navbar>
@@ -345,3 +348,6 @@ $(document).ready(function(){
 </script>
   </body>
 </html>
+
+<script type='text/javascript' data-autoplay='1' data-pid='OSplayer' data-sid='3813' data-v=3 data-p='' data-did='3560' async=true src='//s.openstream.co/extern/p/v3/js/player.js'></script>
+<div id='OSplayer'></div>
