--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
   <div style="scroll-behavior:smooth">
-    <audio id=stream src="http://listen.openstream.co/3813/audio"></audio>
+    <audio id=stream src="http://listen.openstream.co/3813/audio" autostart="0"></audio>
 	<img src="back.png" style="display: none" id=top>
 	<div id=scroll></div>
     <div id=navbar>
