--- a/mobile/index.html
+++ b/mobile/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <audio id=stream src="http://listen.openstream.co/3813/audio" autostart="0"></audio>
+	<iframe id=navbar-desktoplike src="http://silhouetteradio.ddns.net:8080/php/likes.php" style="overflow:hidden" scroll="no"></iframe>
 	<div id=top-titlecontainer>
 	  <h1 id=top-title id=yeete>Silhouette</h1>
 	</div>
