--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<!-- Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141698745-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+      gtag('config', 'UA-141698745-1');
+	</script>
   </head>
   <body>
   <div id=load><div></div></div>
@@ -325,6 +334,8 @@
 	  <img src="./style/images/discord.svg" onClick="window.open('https://discord.gg/ZVeEfbq','_blank')" style="background-color:black"></img>
 	</div>
   </div>
+  <br>
+  <br>
   <br>
   <br>
   <script src="./script/jq.js"></script>
