--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	  <div id=third-cover></div>
 	  <div id=third-contain>
 	    <h1 id=lineup-title>The Lineup</h1>
-		<div id=lineup style="position:relative;top:-370px;"></div>
+		<div id=lineup></div>
 	    <div class=third-day>
 		  <h1>Mon</h1>
 		  <a href="#eveningchill"><span class=third-time>00:00</span> - <span class=calendar id=mon-00>Evening Chill</span></a>
