--- a/404.html
+++ b/404.html
@@ -35,8 +35,9 @@ permalink: /404.html
 	</div>
 	<h2 id=other>Other Pages:</h2>
 	<div id=links>
-	  <a href="http://www.silhouette.gq/legal">Legal</a>
+	  <a href="http://www.silhouette.gq/legal">Terms of Use</a>
 	  <a href="http://www.silhouette.gq/legal/#copyright">Copyright</a>
+	  <a href="http://www.silhouette.gq/privacy">Privacy Policy</a>
 	  <a href="http://www.silhouette.gq/jobs">Jobs</a>
 	  <a href="http://www.silhouette.gq/developer">Developer</a>
 	  <a href="http://www.silhouette.gq/contact">Contact</a>
