--- a/404.html
+++ b/404.html
@@ -41,7 +41,16 @@ permalink: /404.html
 	  <a href="http://www.silhouette.gq/jobs">Jobs</a>
 	  <a href="http://www.silhouette.gq/developer">Developer</a>
 	  <a href="http://www.silhouette.gq/contact">Contact</a>
-	  <a href="http://www.silhouette.gq/contact/#feature">Get Featured</a>
+	  <a href="http://www.silhouette.gq/jobs/#feature">Get Featured</a>
 	</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
   </body>
 </html>
