--- a/privacy/index.html
+++ b/privacy/index.html
@@ -92,7 +92,7 @@
 	<a onClick="window.open('http://www.silhouette.gq/jobs','_blank')">Job Opportunities</a>
 	<a onClick="window.open('http://www.silhouette.gq/developer','_blank')">Use Silhouette</a>
 	<a onClick="window.open('http://www.silhouette.gq/contact','_blank')">Contact</a>
-	<a onClick="window.open('http://www.silhouette.gq/contact/#feature','_blank')">Get Featured</a>
+	<a onClick="window.open('http://www.silhouette.gq/jobs/#feature','_blank')">Get Featured</a>
 	<a href="" style="border-bottom:1px solid red">eyezah development group</a>
 	<div id=footer-social>
 	  <img src="../style/images/instagram.svg" onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')"></img>
