--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Developer Portal | Silhouette</title>
+    <title>Contact | Silhouette</title>
     <link href="../style/doc.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
 
@@ -33,23 +33,13 @@
   </head>
   <body>
   <div id=load><div></div></div>
-  <h1>Developer Portal</h1>
-  <h2>Use Silhouette in an OBS Livestream</h2>
-  <p style="text-align: center">Use Silhouette in your Livestream! Instant 24/7 music for your gameplay or talkshows. Let's get started.</p>
-  <h3>1. Add browser source</h3>
-  <img src="./obs-1.png"></img>
-  <p style="text-align: center">Navigate to the <a>Sources</a> section and select <a>Browser Source</a></p>
-  <h3>2. Modify the Settings</h3>
-  <img src="./obs-2.png"></img>
-  <p style="text-align: center">Set the URL to <a>http://www.silhouette.gq/stream</a></p>
-  <p style="text-align: center">Set the width and height to <a>1080</a> (don't worry, you can change this later)</p>
-  <p style="text-align: center">Modify the fps to yoour liking.</p>
-  <p style="text-align: center">Ensure the Custom Css reads <a>body { background-color: rgba(0,0,0,0); margin: 0px auto; overflow: hidden; }</a></p>
-  <p style="text-align: center">You're ready to go</p>
-  <h3>3. Done!</h3>
-  <img src="./obs-3.png"></img>
-  <p style="text-align: center">Well that was fast...</p>
-  <p style="text-align: center">You can now position and resize the Silhouette Record to your liking, and the radio should start playing automatically. Happy streaming!</p>
+  <h1>Contact Us</h1>
+  <p style="text-align: center">Feel free to contact us regarding any enquiries about positions at Silhouette, copyright concerns, or just to say hi.</p>
+  <h3>Are you contacting us regarding:</h3>
+  <p><a href="mailto:jobs@silhouette.gq?subject=Permant%20Positions">Permanent Positions</a> | <a href="mailto:jobs@silhouette.gq?subject=Permant%20Positions">jobs@silhouette.gq</a></p>
+  <p><a href="mailto:copyright@silhouette.gq?subject=Copyright">Copyright Issues</a> | <a href="mailto:copyright@silhouette.gq?subject=Copyright">copyright@silhouette.gq</a></p>
+  <p><a href="mailto:contact@silhouette.gq?subject=Feature">Getting Featured</a> | <a href="mailto:contact@silhouette.gq?subject=Feature">contact@silhouette.gq</a></p>
+  <p><a href="mailto:contact@silhouette.gq?subject=Advertising">Advertising</a> | <a href="mailto:contact@silhouette.gq?subject=Advertising">contact@silhouette.gq</a></p>
   <br>
   <br>
   <br>
