--- a/jobs/index.html
+++ b/jobs/index.html
@@ -34,43 +34,78 @@
   <body>
   <div id=load><div></div></div>
   <h1>Jobs and Featuring</h1>
+  <p style="text-align: center">Contact us regarding any permanent or non-permanent positions at Silhouette <a href="http://www.silhouette.gq/contact">here</a>.</p>
   <h2>Permanent Positions</h2>
+  
+  
   <h3>Host</h3>
   <p style="text-align: center">Become a crowd favourite at Silhouette! Hosts are often volunteers but are the front of Silhouette. any volunteers are first trialed as a guest and will be rostered on with existing hosts. Running your own show is absolutely a possibility.</p>
   <br>
   <p>requirements: Must be punctual and available to record for at least two hours every weekend on Mountain Road, Grafton/Epsom.</p>
+  <p><a href="mailto:jobs@silhouette.gq?subject=Host%20Position">Contact us</a> regarding this position</p>
+  
+  
   <h3>Regular DJ</h3>
   <p style="text-align: center">Live or planned, it's your choice. DJ often at Silhouette and get your name out there. DJs are arguably the coolest individuals on Radio.</p>
   <br>
   <p>Requirements: At least a one hour set or mix every fortnight. All DJs must perform this set on-site, or can pre-record from home.</p>
+  <p><a href="mailto:jobs@silhouette.gq?subject=DJ%20Position">Contact us</a> regarding this position</p>
+  
+  
   <h3>Scripting</h3>
   <p style="text-align: center">Plan the shows for Silhouette. The ultimate behind-the-scenes work t hat's really appreciated by the entire team. Materialize your dream radio games and talkshows, and see as a reality.</p>
   <br>
   <p>Requirements: Must be able to write and plan scripts of reasonable quality, and be able to manage their allocated show to a high standard. Does not need to be on-site.</p>
+  <p><a href="mailto:jobs@silhouette.gq?subject=Scripting%20Position">Contact us</a> regarding this position</p>
+  
+  
   <h3>Sound Effect Engineer</h3>
   <p style="text-align: center">Develop the Station IDs and the backing music for talkshows. Hear your work seamlessly woven between songs and underlying every talkshow on Silhouette.</p>
   <br>
   <p>Requirements: Must be competent with audio editing and have sufficient knowledge of programs such as Audacity. Must be able to keep up with demand for new Hosts and talkshows</p>
+  <p><a href="mailto:jobs@silhouette.gq?subject=Sound%20Effect%20Engineer%20Position">Contact us</a> regarding this position</p>
+  
+  
   <h3>Producer</h3>
   <p style="text-align: center">No available positions for this role currently.</p>
+  
+  
   <h3>Resident Artist</h3>
   <p style="text-align: center">Send all your new music through Silhouette for promotion. This is a great way for artists to get their music out there and to form a bond with their local Radio.</p>
   <br>
   <p>Requirements: Music Artist/Musician, with a steady output of new music accepted by Silhouette.</p>
+  <p><a href="mailto:jobs@silhouette.gq?subject=Artist%20Position">Contact us</a> regarding this position</p>
+  
+  
   <h3>Marketing</h3>
   <p style="text-align: center">Design all the branding for the new genres and talkshows. Handcraft the presentation of our hosts. Marketers and designers work closely with Sound Effect Engineers and Hosts of their respective talkshows.</p>
   <br>
   <p>Requirements: The means to develop digital art online, (via photoshop, etc), and an eye for design accepted by Silhouette. Must be able to keep up with demand for new advertising content.</p>
-  <h2 id=feature>Featuring and non-permanent positions</h2>
+  <p><a href="mailto:jobs@silhouette.gq?subject=Marketing%20Position">Contact us</a> regarding this position</p>
   
+  
+  
+  <h2 id=feature>Featuring and non-permanent positions</h2>
   <h3>Guest</h3>
   <p style="text-align: center">Share your news or stories with the world as a guest. If you've something to say, this might be your opportunity.</p>
   <br>
   <p>Requirements: The ability to record for approximately two hours on a weekend (one-off), on Mountain Road, Grafton/Epsom.</p>
+  <p><a href="mailto:contact@silhouette.gq?subject=Feature">Contact us</a> regarding this position</p>
+  
+  
   <h3>Irregular DJ or Artist</h3>
   <p style="text-align: center">Submit a one-off mix or record once live on-site and enjoy the hype we build for you while your name is spread among your audience. Get your name out there.</p>
   <br>
   <p>Requirements: The ability to record for approximately two hours on a weekend (one-off), on Mountain Road, Grafton/Epsom, or submit a single mix or set to Silhouette.</p>
+  <p><a href="mailto:contact@silhouette.gq?subject=Feature">Contact us</a> regarding this position</p>
+  
+  
+  <br>
+  <br>
+  <br>
+  <br>
+  <h2>Disclaimer:</h2>
+  <p>Silhouette is a student run radio. Currently all members of staff are volunteers.</p>
   <br>
   <br>
   <br>
@@ -80,7 +115,7 @@
   <br>
   <div id=footer-line></div>
   <div id="footer">
-    <a href="#top">Silhouette</a>
+    <a href="http://www.silhouette.gq">Silhouette</a>
 	<a onClick="window.open('http://www.silhouette.gq/legal/#copyright','_blank')">Copyright Claim</a>
 	<a onClick="window.open('http://www.silhouette.gq/legal','_blank')">Terms of Use</a>
 	<a onClick="window.open('http://www.silhouette.gq/privacy','_blank')">Privacy Policy</a>
@@ -88,6 +123,7 @@
 	<a onClick="window.open('http://www.silhouette.gq/developer','_blank')">Use Silhouette</a>
 	<a onClick="window.open('http://www.silhouette.gq/contact','_blank')">Contact</a>
 	<a onClick="window.open('http://www.silhouette.gq/jobs/#feature','_blank')">Get Featured</a>
+	<a onClick="window.open('http://www.silhouette.gq/contact','_blank')">Advertising Enquiries</a>
 	<a href="" style="border-bottom:1px solid red">eyezah development group</a>
 	<div id=footer-social>
 	  <img src="../style/images/instagram.svg" onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')"></img>
