--- a/privacy/index.html
+++ b/privacy/index.html
@@ -85,7 +85,7 @@
   <br>
   <div id=footer-line></div>
   <div id="footer">
-    <a href="#top">Silhouette</a>
+    <a href="http://www.silhouette.gq">Silhouette</a>
 	<a onClick="window.open('http://www.silhouette.gq/legal/#copyright','_blank')">Copyright Claim</a>
 	<a onClick="window.open('http://www.silhouette.gq/legal','_blank')">Terms of Use</a>
 	<a onClick="window.open('http://www.silhouette.gq/privacy','_blank')">Privacy Policy</a>
@@ -93,6 +93,7 @@
 	<a onClick="window.open('http://www.silhouette.gq/developer','_blank')">Use Silhouette</a>
 	<a onClick="window.open('http://www.silhouette.gq/contact','_blank')">Contact</a>
 	<a onClick="window.open('http://www.silhouette.gq/jobs/#feature','_blank')">Get Featured</a>
+	<a onClick="window.open('http://www.silhouette.gq/contact','_blank')">Advertising Enquiries</a>
 	<a href="" style="border-bottom:1px solid red">eyezah development group</a>
 	<div id=footer-social>
 	  <img src="../style/images/instagram.svg" onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')"></img>
