--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@ permalink: /404.html
 	  <a href="http://www.silhouette.gq/developer">Developer</a>
 	  <a href="http://www.silhouette.gq/contact">Contact</a>
 	  <a href="http://www.silhouette.gq/jobs/#feature">Get Featured</a>
-	  <a onClick="window.open('http://www.silhouette.gq/contact','_blank')">Advertising Enquiries</a>
+	  <a href="http://www.silhouette.gq/contact">Advertising Enquiries</a>
 	  <br>
 	  <br>
 	  <br>
