--- a/jobs/index.html
+++ b/jobs/index.html
@@ -32,6 +32,7 @@
 	</script>
   </head>
   <body>
+  <div id==body>
   <div id=load><div></div></div>
   <h1>Jobs and Featuring</h1>
   <p style="text-align: center">Contact us regarding any permanent or non-permanent positions at Silhouette <a href="http://www.silhouette.gq/contact">here</a>.</p>
@@ -105,7 +106,7 @@
   <br>
   <br>
   <h2>Disclaimer:</h2>
-  <p>Silhouette is a student run radio. Currently all members of staff are volunteers.</p>
+  <p>Silhouette is a student run radio. Currently all members of staff are volunteers. It is recommended that you read our <a href="http://www.silhouette.gq/legal">Terms</a> before submitting any form of application.</p>
   <br>
   <br>
   <br>
@@ -130,6 +131,7 @@
 	  <img src="../style/images/twitch.png" onClick="window.open('https://www.twitch.tv/silhouetteradio/','_blank')"></img>
 	  <img src="../style/images/discord.svg" onClick="window.open('https://discord.gg/ZVeEfbq','_blank')" style="background-color:black"></img>
 	</div>
+  </div>
   </div>
   <script src="../script/doc.js"></script>
   </body>
