--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
 	  <img src="./style/images/twitch.png" onClick="window.open('https://www.twitch.tv/silhouetteradio/','_blank')"></img>
 	  <img src="./style/images/discord.svg" onClick="window.open('https://discord.gg/ZVeEfbq','_blank')" style="background-color:black"></img>
 	</div>
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"><input type="hidden" name="cmd" value="_s-xclick" /><input type="hidden" name="hosted_button_id" value="2QP7EJWKPVCZY" /><input id=form type="image" src="http://isaiah-dsw.github.io/donate.png" border="0" name="submit" title="Donate using PayPal" /><img alt="" border="0" src="./style/images/donate.png" width="1" height="1" /></form>
   </div>
   <br>
   <br>
