--- a/jobs/index.html
+++ b/jobs/index.html
@@ -32,7 +32,7 @@
 	</script>
   </head>
   <body>
-  <div id==body>
+  <div id=body>
   <div id=load><div></div></div>
   <h1>Jobs and Featuring</h1>
   <p style="text-align: center">Contact us regarding any permanent or non-permanent positions at Silhouette <a href="http://www.silhouette.gq/contact">here</a>.</p>
