--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ permalink: /404.html
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Error 404 | Silhouette</title>
-    <link href="./style/404.css" rel="stylesheet" type="text/css" />
+    <link href="http://www.silhouette.gq/style/404.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
