--- a/jobs/index.html
+++ b/jobs/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Jobs | Silhouette</title>
     <link href="../style/doc.css" rel="stylesheet" type="text/css" />
-	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
+	<meta name="description" content="We have a variety of positions available here at Silhouette. Contact us to learn more. The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
