--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 	  </div>
 	  <div id=navbar-desktopcontrolcontainer>
 	    <img id=navbar-desktopcontrol src="./style/images/play-white.svg" onClick="streamToggle()">
-		<iframe id=navbar-desktoplike src="http://silhouetteradio.ddns.net:8080/!admin/php/likes.php" style="overflow:hidden" scroll="no"></iframe>
-		<iframe id=navbar-desktopview src="http://silhouetteradio.ddns.net:8080/!admin/php/hits.php" style="overflow:hidden" scroll="no"></iframe>
+		<iframe id=navbar-desktoplike src="https://php-additions.silhouette.repl.co/php/likes.php" style="overflow:hidden" scroll="no"></iframe>
+		<iframe id=navbar-desktopview src="https://php-additions.silhouette.repl.co/php/hits.php" style="overflow:hidden" scroll="no"></iframe>
 	  </div>
 	</div>
    <!-- <div id=request>
