--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Silhouette - Beats Turning</title>
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
-	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
+	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio by secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
@@ -92,9 +92,9 @@
 	  </div>
 	  <div id=second-fontcontainer>
 	    <h1 id=second-title>The hottest internet radio this side of the known universe</h1>
-		<p>Silhouette is a New Zealand based Internet radio station, dedicated to brining you the very best electronic music. Listen Live to hear our amazing Live shows and guest djs as well as  constant interruption free music.</p>
+		<p>Silhouette is a New Zealand based Internet radio station, dedicated to bringing you the very best electronic music. Listen Live to hear our amazing Live shows and guest DJs as well as constant interruption free music.</p>
 		<div class=shows><div></div><a href="#shows">Shows</a></div>
-		<p>If the live medium doesn't suit you then check out the latest podcasts of our favorite shows, or download our playlist to stream now.</p>
+		<p>If the live medium doesn't suit you then check out the latest podcasts of our favorite shows, or download a playlist to stream offline.</p>
 	    <div class=listen-contain id=second-base onClick="forcePlay()"><div class=listen><div class=listen-img></div><div class=listen-block><h1>listen</h1></div></div></div>
 	  </div>
 	  <br>
