--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Silhouette - Beats Turning</title>
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio by secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
@@ -21,6 +21,14 @@
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
+	<meta property="og:title" content="Silhouette" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.silhouette.gq" />
+	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
+	<meta property="og:site_name" content="Silhouette" />
+	<meta property="og:locale" content="en_US">
+	
 	<!-- Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141698745-1"></script>
 	<script>
@@ -32,7 +40,7 @@
 	</script>
   </head>
   <body>
-  <div id=load><div></div></div>
+  <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <div style="scroll-behavior:smooth">
     <audio id=stream src="https://listen.openstream.co/3813/audio" autostart="0"></audio>
 	<img src="back.png" style="display: none" id=top>
@@ -341,6 +349,7 @@
 	  <input type="image" id=form src="./style/images/donate.png" border="0" name="submit" />
 	  <img alt="" border="0" src="https://www.paypal.com/en_NZ/i/scr/pixel.gif" width="1" height="1" />
 	</form>
+	<p>Yeah, we use cookies. Thanks for accepting them. (No seriously if you don't want our cookies then please refrain from using Silhouette)</p>
   </div>
   <br>
   <br>
