--- a/shows/jamesandfletch/index.html
+++ b/shows/jamesandfletch/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>James and Fletch | Silhouette</title>
-    <link href="../style.css" rel="stylesheet" type="text/css" />
-	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio by secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Silhouette - Beats Turning</title>
+    <link href="../style/style.css" rel="stylesheet" type="text/css" />
+	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
@@ -22,23 +22,17 @@
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	
+	<meta property="og:title" content="Silhouette" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.silhouette.gq/shows/jamesandfletch" />
 	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
-	<meta property="og:type" content="radio" />
 	<meta property="og:site_name" content="Silhouette" />
-	<meta property="og:title" content="James and Fletch | Silhouette" />
-	<meta property="og:url" content="https://www.silhouette.gq/shows/jamesandfletch/" />
-	<meta property="og:description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio by secondary school students in the Auckland region. It's Locally operated, and functions with community in mind." />
+	<meta property="og:locale" content="en_US">
 	
-	<!-- Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141698745-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-      gtag('config', 'UA-141698745-1');
-	</script>
   </head>
   <body>
+    <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
+    <h1>James and Fletch</h1>
+	<script src="../style/script.js"></script>
   </body>
 </html>
