--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Error 404 | Silhouette</title>
     <link href="http://www.silhouette.gq/style/404.css" rel="stylesheet" type="text/css" />
 	<meta name="description" content="The hottest internet radio this side of the known universe. Silhouette is the loudest Internet Radio for secondary school students in the Auckland region. It's Locally operated, and functions with community in mind.">
@@ -25,6 +25,14 @@ permalink: /404.html
 	<link rel="icon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
+	<meta property="og:title" content="Silhouette" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.silhouette.gq" />
+	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
+	<meta property="og:site_name" content="Silhouette" />
+	<meta property="og:locale" content="en_US">
+	
   </head>
   <body>
     <div></div>
