--- a/404.html
+++ b/404.html
@@ -32,6 +32,7 @@ permalink: /404.html
 	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
 	<meta property="og:site_name" content="Silhouette" />
 	<meta property="og:locale" content="en_US">
+	<meta property="og:description" content="The hottest internet radio this side of the known universe | Silhouette - Beats Turning">
 	
   </head>
   <body>
