--- a/shows/jamesandfletch/index.html
+++ b/shows/jamesandfletch/index.html
@@ -22,12 +22,13 @@
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	
-	<meta property="og:title" content="Silhouette" />
+	<meta property="og:title" content="James and Fletch | Silhouette" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.silhouette.gq/shows/jamesandfletch" />
 	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
 	<meta property="og:site_name" content="Silhouette" />
 	<meta property="og:locale" content="en_US">
+	<meta property="og:description" content="The hottest internet radio this side of the known universe | Silhouette - Beats Turning">
 	
   </head>
   <body>
