--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel="favicon" type="image/png" href="http://www.silhouette.gq/favicons/favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	
-	<meta property="og:title" content="Silhouette" />
+	<meta property="og:title" content="Silhouette - Beats Turning" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.silhouette.gq" />
 	<meta property="og:image" content="https://www.silhouette.gq/favicons/thumbnail.png" />
