--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
   <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <div style="scroll-behavior:smooth">
-    <audio id=stream src="https://listen.openstream.co/3813/audio" autostart="0"></audio>
+    <audio id=stream src="https://str2b.openstream.co/1010?aw_0_1st.stationid=3813&aw_0_1st.publisherId=1034&aw_0_1st.serverId=str2b" autostart="0"></audio>
 	<img src="back.png" style="display: none" id=top>
 	<div id=scroll></div>
     <div id=navbar>
