--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@
 	<div id=fifth>
 	  <h1 id=shows-title>Shows and Music</h1>
 	  <div id=shows style="position:relative;top:-300px"></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/morningchill.jpg')"><div class=fifth-anchor id=morningchill></div></div>
-	  <div class=fifth-show style="background-image: url('./style/images/shows/eveningchill.jpg')"><div class=fifth-anchor id=eveningchill></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/shows/Tripsketch.jpg')"><div class=fifth-anchor id=tripsketch></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/shows/Evening Chill.jpg')"><div class=fifth-anchor id=eveningchill></div></div>
+	  <div class=fifth-show style="background-image: url('./style/images/shows/Morning Chill.jpg')"><div class=fifth-anchor id=morningchill></div></div>
 	  <div class=fifth-show style="background-image: url('./style/images/shows/afternoonride.png')"><div class=fifth-anchor id=afternoonride></div></div>
 	</div>
 	<br>
