--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		  <a class="navbar-q navbar-quality" onClick="qualityHigh()">High</a>
 		  <a class="navbar-q navbar-quality-selected" onClick="qualityMedium()">Medium</a>
 		</div>
-		<iframe id=navbar-desktopview src="https://php-additions.silhouette.repl.co/php/hits.php" style="overflow:hidden" scroll="no"></iframe>
+		<iframe id=navbar-desktopview src="https://thesetproject.gq/hits/" style="overflow:hidden" scroll="no"></iframe>
 	  </div>
 	</div>
   </div>
